# calendar-notice

./: .gitignore  Cargo.toml  README.md  db.sqlite-shm  db.sqlite-wal  oauth_secret_sample.json
migrations/2024-08-12-120319_events/: up.sql
migrations/2024-08-12-220246_notifications/: down.sql  up.sql
migrations/2024-08-15-045819_oauth_tokens/: up.sql
migrations/2024-08-20-120319_events/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/calendar/: mod.rs
src/command_line/: mod.rs  ui.rs
src/db/: mod.rs
src/env/: mod.rs
src/google_calendar/: extract_teams_link.rs  extract_zoom_link.rs  mod.rs
src/notification/: filter_upcoming_events.rs  mod.rs
src/oauth/: is_token_expired.rs  mod.rs  oauth_secret.rs
src/repository/: mod.rs  models.rs
src/tui/: mod.rs  ui.rs
