[package]
name = "calendar-notice"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
open = "5.3.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
clap = { version = "4.5.9", features = ["derive"] }
chrono = "0.4.38"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.10.0", features = ["v4"] }

[lib]
name = "calendar_notice"
path = "src/lib.rs"

[[bin]]
name = "calendar-notice"
path = "src/main.rs"
